--- a/css/style.scss
+++ b/css/style.scss
@@ -156,6 +156,7 @@ input.input-inline {
 	width: 100%;
 	height: 100%;
 	background-color: $color-main-background;
+	background-color: var(--color-main-background);
 }
 
 #board {
@@ -212,9 +213,17 @@ input.input-inline {
 	padding: 10px;
 
 	> .as-sortable-placeholder {
-		display: inline-block !important;
+		display: flex !important;
+		width: 320px;
+		min-width: 320px;
 		margin-top: 0;
 		margin-left: 0;
+	}
+
+	> .as-sortable-drag {
+		background-color: $color-main-background;
+		background-color: var(--color-main-background);
+		box-shadow: 0 0 7px 0 $color-background-dark;
 	}
 }
 
@@ -321,6 +330,7 @@ input.input-inline {
 
 #stack-add {
 	background-color: $color-lightgrey;
+	background-color: var(--color-lightgrey);
 	border-radius: 3px;
 	margin: 3px;
 	display: flex;
@@ -365,9 +375,9 @@ input.input-inline {
 			width: 100%;
 			margin: 0;
 			font-size: 12pt;
-			font-weight: 700;
 			border: 0;
 			background-color: $color-main-background;
+			background-color: var(--color-main-background);
 			min-height: initial;
 		}
 
@@ -400,6 +410,11 @@ input.input-inline {
 		}
 	}
 
+	&.as-sortable-item {
+		height: 100%;
+		display: flex;
+	}
+
 	> ul {
 		display: flex;
 		flex-direction: column;
@@ -409,6 +424,7 @@ input.input-inline {
 
 .card {
 	background-color: $color-main-background;
+	background-color: var(--color-main-background);
 	margin: $board-item-margin;
 	white-space: normal;
 	position: relative;
@@ -475,6 +491,7 @@ input.input-inline {
 			&.overdue {
 				background-color: $color-error;
 				color: $color-primary-text;
+				color: var(--color-primary-text);
 
 				.icon-badge {
 					background-image: url('../img/calendar-white.svg');
@@ -659,6 +676,7 @@ input.input-inline {
 		margin: 0;
 		overflow: hidden;
 		background-color: $color-lightgrey;
+		background-color: var(--color-lightgrey);
 
 		input {
 			min-height: 0px;
@@ -685,7 +703,8 @@ input.input-inline {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: #fff;
+	background-color: $color-main-background;
+	background-color: var(--color-main-background);
 	z-index: 100;
 	opacity: 0.9;
 	text-align: center;
@@ -773,7 +792,9 @@ input.input-inline {
 		}
 		&.unsaved {
 			background-color: $color-lightgrey;
+			background-color: var(--color-lightgrey);
 			color: $color-darkgrey;
+			color: var(--color-darkgrey);
 		}
 	}
 
@@ -820,6 +841,7 @@ input.input-inline {
 		width: 100%;
 		height: 100%;
 		background-color: rgba($color-darkgrey, 0.5);
+		background-color: var(--color-background-dark);
 		left: 0;
 		top: 0;
 	}
@@ -835,6 +857,7 @@ input.input-inline {
 			left: 50%;
 			transform: translate(-50%, -50%);
 			background-color: $color-main-background;
+			background-color: var(--color-main-background);
 			z-index: 2;
 			border-radius: 3px;
 			box-shadow: 0 0 3px $color-darkgrey;
@@ -932,6 +955,8 @@ input.input-inline {
 
 			.container {
 				background-color: $color-main-background;
+				background-color: var(--color-main-background);
+
 			}
 		}
 	}
@@ -1392,6 +1417,7 @@ input.input-inline {
 
 	pre {
 		background-color: $color-lightgrey;
+		background-color: var(--color-background-dark);
 		padding: 3px;
 		overflow: auto;
 
